(library
  (name compiler)
  (wrapped false)
  (libraries camomile)
  (inline_tests)
  (preprocess
    (staged_pps
      ppx_import
      ppx_deriving.show
      ppx_expect))
  (flags
    (:standard -warn-error -A)))

(ocamllex
  (modules lexer))

(menhir
  (modules parser)
  (flags (--explain          ; explain conflicts in <basename>.conflicts
          --dump             ; write an .automaton file
          --graph            ; write a dependency graph to a .dot file
          --log-grammar 2))
  (infer true))
